# pg-visualize-aggregates

./: Cargo.toml  README.md  visualizing_aggregates.control
src/: graph.rs  lib.rs  models.rs  seed.rs
src/templates/: bar_graph_template.html  svg_template.html
