[package]
name = "visualizing_aggregates"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_visualizing_aggregates"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
minijinja = "2.8.0"
pgrx = "=0.13.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "default-tls"] }
serde = "1.0.218"
serde_json = "1.0.140"

[dev-dependencies]
pgrx-tests = "=0.13.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
